@startuml
title logica y carta

package modelo {
    package logica {
        class Batalla
        class Juego
    }

    package carta {
        class Carta
        interface EstadoCarta
        class CartaActivada
        class CartaNoActivada
    }

    CartaActivada ..|> EstadoCarta
    CartaNoActivada ..|> EstadoCarta
    Carta --> EstadoCarta
    Juego --> Carta
}

@enduml